Fix bug 52548, sidebar links open in composer window and nuke composer content. sr=mscott, r=vishy.