editor/composer/src/nsEditorShell.h
@@ -39,6 +39,7 @@
 #include "nsIStreamObserver.h"
 #include "nsIDOMDocument.h"
 #include "nsIDOMEventListener.h"
+#include "nsIURIContentListener.h"
 #include "nsVoidArray.h"
 #include "nsTextServicesCID.h"
 #include "nsIEditorSpellCheck.h"
@@ -76,7 +77,8 @@ class nsIStyleSheet;
 
 class nsEditorShell :   public nsIEditorShell,
                         public nsIEditorSpellCheck,
-                        public nsIDocumentLoaderObserver
+                        public nsIDocumentLoaderObserver,
+                        public nsIURIContentListener
 {
   public:
 
@@ -98,6 +100,9 @@ class nsEditorShell :   public nsIEditorShell,
     // nsIDocumentLoaderObserver
     NS_DECL_NSIDOCUMENTLOADEROBSERVER
 
+    // nsIURIContentListener
+    NS_DECL_NSIURICONTENTLISTENER
+    
   protected:
 
     typedef enum {
